frontend-90: * fixed z-index for notifications

--- a/frontend/src/components/notification-dropdown/styles.module.scss
+++ b/frontend/src/components/notification-dropdown/styles.module.scss
@@ -9,6 +9,7 @@
 
 .wrapper {
   position: relative;
+  z-index: 15;
 }
 
 .bell,
